Introduce wellness ring apis #1
